--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <h1>TESTing</h1>
 <ul>
-	
+	<% for (var i=0; i<scores.length; i++) { %>
+		<li><%= scores[i].name + ' ' + scores[i].score %></li>
+	<% } %>
 </ul>
