--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,3 +4,11 @@
 		<li><%= scores[i].name + ' ' + scores[i].score %></li>
 	<% } %>
 </ul>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io.connect('http://localhost');
+  socket.on('news', function (data) {
+    console.log(data);
+    socket.emit('my other event', { my: 'data' });
+  });
+</script>
