--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 </ul>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  var socket = io.connect('http://localhost');
+  var socket = io.connect();
   socket.on('news', function (data) {
     console.log(data);
     socket.emit('my other event', { my: 'data' });
