--- a/views/controller.ejs
+++ b/views/controller.ejs
@@ -1,2 +1,3 @@
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<h1>Controller</h1>
+<p id="status">Not Connected</p>
+<script src="/js/controller.js"></script>
