--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,9 +3,8 @@
   <head>
     <title>Socket Play<% if (title != '') { %> | <%= title %><% } %></title>
     <link rel='stylesheet' href='/css/style.css' />
-	<% if (slug == 'controller') { %>
-		<script src="/js/controller.js"></script>
-	<% } %>
+	<script src="/js/jquery.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <%- body %>
