--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,5 @@
 <div id="content"></div>
 <h4 id="gameid"></h4>
 <div id="status">Controller not connected</div>
-<div id="info"></div>
+<div id="info"><span id="ups"></span> Updates/Sec</div>
 <script data-main="js/main" src="js/require.js"></script>
