basic ship and stars done

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,8 +1,25 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font-family: Monospace;
+	background-color: #000000;
+	margin: 0px;
+	overflow: hidden;
+	color: #fff;
 }
 
-a {
-  color: #00B7FF;
+#panel {
+	position: absolute;
+	top: 15px;
+	left: 15px;
+}
+
+#controller {
+	position: absolute;
+	top: 100px;
+	right: 0;
+	-webkit-transform: rotate(90deg);
+}
+
+h4 {
+	margin: 0;
+	font-size: 15px;
 }
