--- a/views/controller.ejs
+++ b/views/controller.ejs
@@ -1,4 +1,6 @@
-<h1>Controller</h1>
-<p id="status">Not Connected</p>
-<p id="info"></p>
+<div id="controller">
+	<h1>Controller</h1>
+	<p id="status">Not Connected</p>
+	<p id="info"></p>
+</div>
 <script src="/js/controller.js"></script>
