--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
-<h1>TESTingg</h1>
 <div id="content"></div>
-<h4 id="gameid"></h4>
-<div id="status">Controller not connected</div>
-<div><span id="ups"></span> Updates/Sec</div>
-<br/>
-<div id="info"></div>
+<div id="panel">
+	<h4>Game ID: <span id="gameid"></span></h4>
+	<div id="status">Controller not connected</div>
+	<div id="updates"></div>
+	<br/>
+	<div id="info"></div>
+</div>
 <script data-main="js/main" src="js/require.js"></script>
