--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/css/style.css' />
 	<script src="/js/jquery.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   </head>
   <body>
     <%- body %>
