--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,12 +10,6 @@ body {
   top: 15px;
   left: 15px;
 }
-#controller {
-  position: absolute;
-  top: 100px;
-  right: 0;
-  -webkit-transform: rotate(90deg);
-}
 #menu {
   width: 100%;
   position: absolute;
@@ -72,4 +66,18 @@ a:hover {
 }
 #how-popup li {
   margin: 10px 0;
+}
+#controller {
+  position: absolute;
+  top: 100px;
+  height: 155px;
+  text-align: center;
+  right: 0;
+  -webkit-transform: rotate(90deg);
+  font-weight: bold;
+}
+#connect {
+  font-weight: bold;
+  font-size: 20px;
+  color: #f33;
 }
