--- a/public/css/style.less
+++ b/public/css/style.less
@@ -12,13 +12,6 @@ body {
 	left: 15px;
 }
 
-#controller {
-	position: absolute;
-	top: 100px;
-	right: 0;
-	-webkit-transform: rotate(90deg);
-}
-
 #menu {
 	width: 100%;
 	position: absolute;
@@ -84,4 +77,20 @@ a:hover {
 
 #how-popup li {
 	margin: 10px 0;
+}
+
+#controller {
+	position: absolute;
+	top: 100px;
+	height: 155px;
+	text-align: center;
+	right: 0;
+	-webkit-transform: rotate(90deg);
+	font-weight: bold;
+}
+
+#connect {
+	font-weight: bold;
+	font-size: 20px;
+	color: #f33;
 }
