--- a/views/controller.ejs
+++ b/views/controller.ejs
@@ -1,6 +1,7 @@
 <div id="controller">
-	<h1>Controller</h1>
+	<h1>Hold It This Way!</h1>
+	<br/>
 	<p id="status">Not Connected</p>
-	<p id="info"></p>
+	<a id="connect">CONNECT</p>
 </div>
 <script src="/js/controller.js"></script>
