--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
 	</ol>
 	<br/>
 	<div style="text-align: center">
-		<a class="resume">[Play]</a>
+		<a class="resume">[OK]</a>
 		<br/>
 		<a>[Video Coming Soon]</a>
 	</div>
