--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,3 +1,9 @@
+@lightblue: #00E6FF;
+
+.highlight {
+	color: @lightblue;
+}
+
 body {
 	font-family: Monospace;
 	background-color: #000000;
@@ -34,13 +40,18 @@ body {
 	font-weight: bold;
 }
 
+h2 {
+	color: @lightblue;
+	text-align: center;
+}
+
 h4 {
 	margin: 0 0 5px;
 	font-size: 15px;
 }
 
 a {
-	color: #33BBC8;
+	color: @lightblue;
 	cursor: pointer;
 	text-decoration: none;
 }
@@ -67,7 +78,7 @@ a:hover {
 }
 
 #how-popup {
-	margin-top: -250px;
+	margin-top: -270px;
 	width: 360px;
 	left: 50%;
 	text-align: left;
