--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,13 +27,13 @@
 </div>
 
 <div class="popup" id="how-popup">
-	<div style="font-weight: bold; font-size: 14px;">Note: My VPS is kind of unstable so sometimes the sockets won't work. Sorry if that happens to you...</div>
-	<br/>
+	<h2>How to Play</h2>
 	<ol>
 		<li>Browser requirement: latest versions of Chrome or Firefox</li>
 		<li>Device requirement: iPhone with iOS 4.2+</li>
 		<li>Make sure your iPhone is connected to WiFi, otherwise it won't work</li>
-		<li>Open Mobile Safari and go to <span style="color: #33BBC8">http://s.magnetic.io:8888/c</span> (Don't forget the port!)</li>
+		<li>Lock your iPhone's orientation</li>
+		<li>Open Mobile Safari and go to <span class="highlight">http://s.magnetic.io:8888/c</span> (Don't forget the port!)</li>
 		<li>Enter the game ID shown in the upper left corner</li>
 		<li>Enjoy</li>
 	</ol>
