--- a/views/controller.ejs
+++ b/views/controller.ejs
@@ -1,7 +1,8 @@
 <div id="controller">
+	<h2>Lock Orientation</h2>
 	<h1>Hold It This Way!</h1>
 	<br/>
 	<p id="status">Not Connected</p>
-	<a id="connect">CONNECT</p>
+	<a id="connect">[CONNECT]</p>
 </div>
 <script src="/js/controller.js"></script>
