--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
 	<div style="text-align: center">
 		<a class="resume">[OK]</a>
 		<br/>
-		<a>[Video Coming Soon]</a>
+		<a href="http://vimeo.com/31668578">[Watch Video]</a>
 	</div>
 </div>
 <script data-main="js/main" src="js/require.js"></script>
