updated jquery to 1.7, requirejs to 1.0, and added build script.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,4 +44,6 @@
 		<a href="http://vimeo.com/31668578">[Watch Video]</a>
 	</div>
 </div>
-<script data-main="js/main" src="js/require.js"></script>
+<script data-main="js/app-dev" src="js/require.js"></script>
+<!-- remove the dev script above, build using build.sh and uncomment the following for deployment. -->
+<!--<script src="js/app.js"></script>-->
