switched to zepto.js for mobile controller, adjusted lib files and built with requirejs

--- a/views/controller.ejs
+++ b/views/controller.ejs
@@ -5,4 +5,5 @@
 	<p id="status">Not Connected</p>
 	<a id="connect">[CONNECT]</p>
 </div>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/zepto/0.7/zepto.min.js"></script>
 <script src="/js/controller.js"></script>
