--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
 		<li>Device requirement: iPhone with iOS 4.2+</li>
 		<li>Make sure your iPhone is connected to WiFi, otherwise it won't work</li>
 		<li>Lock your iPhone's orientation</li>
-		<li>Open Mobile Safari and go to <span class="highlight">http://s.magnetic.io:8888/c</span> (Don't forget the port!)</li>
+		<li>Open Mobile Safari and go to <span class="highlight">http://sp.youyuxi.com:8888/c</span> (Don't forget the port!)</li>
 		<li>Enter the game ID shown in the upper left corner</li>
 		<li>Enjoy</li>
 	</ol>
